apply plugin: 'com.android.application'

android {
    compileSdkVersion  = 37
    defaultConfig {
        applicationId = "nz.mentalinc.episodeWatcher"
        minSdk = 33
        targetSdkVersion 36
        versionCode = 40
        versionName = '1.9.0'

        missingDimensionStrategy   'react-native-camera', 'general'

        javaCompileOptions {
            annotationProcessorOptions {
                arguments = ["room.schemaLocation": "$projectDir/schemas".toString()]
            }
        }
    }

    signingConfigs {
        debug {
            storeFile file('../keystore/debug.keystore')
        }
        release {
            storeFile file('../keystore/dvr-android.keystore')
            storePassword System.getenv("storepwd")
            keyAlias System.getenv("keyalias")
            keyPassword System.getenv("keypwd")
        }
    }
    buildTypes {
        debug {
            versionNameSuffix '- DEBUG'
            applicationIdSuffix ".debug"
            signingConfig = signingConfigs.debug
        }
        release {
            minifyEnabled false
           // proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
            signingConfig = signingConfigs.release
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }
    productFlavors {
    }
    //buildToolsVersion '34.0.0'
    buildFeatures {
        viewBinding = true
    }
    namespace = 'nz.mentalinc.episodeWatcher'
    buildToolsVersion = '36.1.0'
}


dependencies {

    implementation fileTree(include: ['*.jar'], dir: 'libs')
    implementation 'androidx.room:room-runtime:2.8.4'
    implementation 'androidx.fragment:fragment:1.8.9'
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
    implementation 'androidx.appcompat:appcompat:1.7.1'
    implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
    implementation 'androidx.navigation:navigation-fragment:2.9.7'
    implementation 'androidx.navigation:navigation-ui:2.9.7'

    annotationProcessor 'androidx.room:room-compiler:2.8.4'
    // For Kotlin use kapt instead of annotationProcessor
    implementation 'androidx.test:runner:1.7.0'
    implementation 'androidx.test.espresso:espresso-core:3.7.0'
    implementation 'androidx.core:core:1.18.0'


    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.3.0'
    implementation 'com.google.android.material:material:1.13.0'
    implementation 'androidx.preference:preference:1.2.1'
    implementation 'androidx.annotation:annotation:1.10.0'
    implementation 'androidx.compose.material3:material3:1.4.0'

    implementation 'com.github.bumptech.glide:glide:5.0.5'
    implementation('com.github.bumptech.glide:glide:5.0.5') {
        exclude group: "com.android.support"
    }
    implementation('com.github.bumptech.glide:glide:5.0.5') {
        transitive = true
    }
}
